# 26E2_2

./: .gitignore  README.md  pyproject.toml
notebooks/: pln_pipeline.html  pln_pipeline.ipynb
outputs/graph/: knowledge_graph.graphml  knowledge_graph.html
outputs/models/: clf_best.joblib
report/: relatorio.md
scripts/: build_processed.py  build_report.py  download_corpus.py  setup_nltk.py
