[project]
name = "pln-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "gensim>=4.3.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "numpy<2",
    "pandas>=2.0",
    "pyarrow>=24.0.0",
    "pyvis>=0.3.2",
    "rapidfuzz>=3.14.5",
    "scikit-learn>=1.3,<1.5",
    "scipy<1.13",
    "seaborn>=0.13.2",
    "spacy>=3.7,<3.8",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
report = [
    "markdown>=3.10.2",
    "xhtml2pdf>=0.2.17",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
